--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "note2self",
-  "version": "0.0.0",
+  "version": "1.5.0",
   "private": true,
   "type": "module",
   "engines": {
@@ -19,14 +19,21 @@
     "format": "prettier --write --experimental-cli src/"
   },
   "dependencies": {
+    "date-fns": "^4.1.0",
+    "dompurify": "^3.3.1",
     "firebase": "^12.6.0",
+    "jszip": "^3.10.1",
+    "marked": "^17.0.1",
     "pinia": "^3.0.4",
     "vue": "^3.5.25",
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
     "@tsconfig/node24": "^24.0.3",
+    "@types/dompurify": "^3.0.5",
     "@types/jsdom": "^27.0.0",
+    "@types/jszip": "^3.4.0",
     "@types/node": "^24.10.1",
     "@vitejs/plugin-vue": "^6.0.2",
     "@vitest/eslint-plugin": "^1.5.0",
@@ -34,12 +41,16 @@
     "@vue/eslint-config-typescript": "^14.6.0",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.8.1",
+    "autoprefixer": "^10.4.23",
     "eslint": "^9.39.1",
     "eslint-plugin-vue": "~10.5.1",
+    "happy-dom": "^20.0.11",
     "jiti": "^2.6.1",
-    "jsdom": "^27.2.0",
+    "jsdom": "^27.4.0",
     "npm-run-all2": "^8.0.4",
+    "postcss": "^8.5.6",
     "prettier": "3.6.2",
+    "tailwindcss": "^4.1.18",
     "typescript": "~5.9.0",
     "vite": "^7.2.4",
     "vite-plugin-pwa": "^1.2.0",
