--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "format": "prettier --write --experimental-cli src/"
   },
   "dependencies": {
+    "@toast-ui/editor": "^3.2.2",
     "date-fns": "^4.1.0",
     "dompurify": "^3.3.1",
     "firebase": "^12.6.0",
