--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "note2self",
-  "version": "1.5.1",
+  "version": "1.6.0",
   "private": true,
   "type": "module",
   "engines": {
@@ -27,6 +27,7 @@
     "marked": "^17.0.1",
     "pinia": "^3.0.4",
     "vue": "^3.5.25",
+    "vue-i18n": "^11.2.8",
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
